--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   background-color: black;
   background-image: linear-gradient(180deg, rgb(2, 255, 82), rgb(21, 96, 35), rgb(0, 0, 0), rgb(0, 0, 0));
   height: 100%;
+  width: 100%;
 }
 
 .body {
