--- a/src/styles/ProjectsPage.css
+++ b/src/styles/ProjectsPage.css
@@ -23,3 +23,14 @@
     display: grid;
     grid-template-columns: 33% 33% 33%;
   }
+
+  @media only screen and (max-width: 430px) {
+
+    #project3 {
+      grid-template-columns: repeat(1, 200px);
+    }
+    .project-item {
+      margin-top: 50px;
+    }
+
+  } 
